Tweak courses.html and styles!

--- a/courses.html
+++ b/courses.html
@@ -34,7 +34,7 @@
                 <ul class="nav navbar-nav">
                     <li><a href="/">Home<span class="sr-only">(current)</span></a></li>
                     <li><a href="projects.html">Projects</a></li>
-                    <li><a href="show.html">Show room</a></li>
+                    <!--<li><a href="show.html">Show room</a></li>-->
                     <li class="active"><a href="#">Completed courses</a></li>
                 </ul>
             </div>
@@ -49,219 +49,268 @@
 
             <h1 class="text-center">Completed online courses</h1>
 
-            <div class="row extra-top-padding-60">
-                <h2 class="col-xs-12">
-                    Microsoft Virtual Academy
+            <h2 class="extra-top-padding-60">
+                Microsoft Virtual Academy
 
-                    <small><a href="https://mva.microsoft.com/Profile.aspx?alias=3423187">see profile</a></small>
+                <small><a href="https://mva.microsoft.com/Profile.aspx?alias=3423187">see profile</a></small>
 
-                </h2>
+            </h2>
+
+            <div class="row">
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/mean-stack-jump-start-8442">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/django-in-the-real-world-14684" class="course_link">
+
+                        <div class="card inprogress" title="Learning in progress...">
+
+                            Django in the Real World
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/developing-websites-using-python-and-django-11415" class="course_link">
+
+                        <div class="card">
+
+                            Developing Websites Using Python and Django
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/mean-stack-jump-start-8442" class="course_link">
 
                         <div class="card">
 
                             MEAN Stack Jump Start
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/mongodb-and-redis-caching-8654">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/mongodb-and-redis-caching-8654" class="course_link">
 
                         <div class="card">
 
                             MongoDB and Redis Caching
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-angular-20-16540">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-angular-20-16540" class="course_link">
 
                         <div class="card">
 
                             Introduction to Angular 2.0
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/using-nodejs-with-visual-studio-code-13920">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/using-nodejs-with-visual-studio-code-13920" class="course_link">
 
                         <div class="card">
 
                             Using Node.js with Visual Studio Code
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-aspnet-core-10-16841">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/introduction-to-aspnet-core-10-16841" class="course_link">
 
                         <div class="card">
 
                             Introduction to ASP.NET Core 1.0
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/querying-microsoft-sql-server-2012-databases-jump-start-8241">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/querying-microsoft-sql-server-2012-databases-jump-start-8241" class="course_link">
 
                         <div class="card">
 
                             Querying Microsoft SQL Server 2012 Databases Jump Start
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/programming-in-c-jump-start-14254" class="course_link">
 
                         <div class="card">
 
                             Programming in C# Jump Start
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/developer-productivity-whats-new-in-c-6-8733">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/developer-productivity-whats-new-in-c-6-8733" class="course_link">
 
                         <div class="card">
 
                             Developer Productivity: What's New in C# 6
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://mva.microsoft.com/en-US/training-courses/the-modern-web-platform-jump-start-8337">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/javascript-for-experienced-developers-14430" class="course_link">
+
+                        <div class="card">
+
+                            JavaScript for Experienced Developers
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/building-responsive-ui-with-bootstrap-8378" class="course_link">
+
+                        <div class="card">
+
+                            Building Responsive UI with Bootstrap
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <a href="https://mva.microsoft.com/en-US/training-courses/the-modern-web-platform-jump-start-8337" class="course_link">
 
                         <div class="card">
 
                             The Modern Web Platform Jump Start
-
                         </div>
                     </a>
                 </div>
 
             </div>
 
-            <div class="row extra-top-padding-60">
-                <h2 class="col-xs-12">
-                    Udacity
+            <h2 class="extra-top-padding-60">
+                Udacity
 
-                    <small><a href="https://discussions.udacity.com/users/badersur">see profile</a></small>
+                <small><a href="https://discussions.udacity.com/users/badersur">see profile</a></small>
 
-                </h2>
+            </h2>
+
+            <div class="row">
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://www.udacity.com/course/web-development--cs253">
+                    <a href="https://www.udacity.com/course/web-development--cs253" class="course_link">
 
                         <div class="card">
 
                             Web Development
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://www.udacity.com/course/developing-android-apps--ud853">
+                    <a href="https://www.udacity.com/course/developing-android-apps--ud853" class="course_link">
 
                         <div class="card">
 
                             Developing Android Apps
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://www.udacity.com/course/intro-to-computer-science--cs101">
+                    <a href="https://www.udacity.com/course/intro-to-computer-science--cs101" class="course_link">
 
                         <div class="card">
 
                             Intro to Computer Science
+                        </div>
+                    </a>
+                </div>
 
+                <div class="col-sm-6 col-md-4">
+                    <a href="https://www.udacity.com/course/how-to-use-git-and-github--ud775" class="course_link">
+
+                        <div class="card">
+
+                            How to Use Git and GitHub
+                        </div>
+                    </a>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <a href="https://www.udacity.com/course/programming-foundations-with-python--ud036" class="course_link">
+
+                        <div class="card">
+
+                            Programming Foundations with Python
                         </div>
                     </a>
                 </div>
 
             </div>
 
-            <div class="row extra-top-padding-60">
-                <h2 class="col-xs-12">
-                    Codecademy
+            <h2 class="extra-top-padding-60">
+                Codecademy
 
-                    <small><a href="https://www.codecademy.com/BaderSur">see profile</a></small>
+                <small><a href="https://www.codecademy.com/BaderSur">see profile</a></small>
 
-                </h2>
+            </h2>
+
+            <div class="row">
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://www.codecademy.com/en/skills/make-an-interactive-website">
+                    <a href="https://www.codecademy.com/en/skills/make-an-interactive-website" class="course_link">
 
                         <div class="card">
 
                             Make an Interactive Website
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://www.codecademy.com/learn/learn-angularjs">
+                    <a href="https://www.codecademy.com/learn/learn-angularjs" class="course_link">
 
                         <div class="card">
 
                             Learn AngularJS 1.X
-
                         </div>
                     </a>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://www.codecademy.com/learn/php">
+                    <a href="https://www.codecademy.com/learn/php" class="course_link">
 
                         <div class="card">
 
                             PHP
-
                         </div>
                     </a>
                 </div>
 
             </div>
 
-            <div class="row extra-top-padding-60">
-                <h2 class="col-xs-12">
-                    NewCircle Training
+            <h2 class="extra-top-padding-60">
+                NewCircle Training
 
-                </h2>
+            </h2>
+
+            <div class="row">
 
                 <div class="col-sm-6 col-md-4">
-                    <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F">
+                    <a href="https://www.youtube.com/playlist?list=PLE08A97D36D5A255F" class="course_link">
 
                         <div class="card">
 
                             Android Bootcamp Series 2012
-
                         </div>
                     </a>
                 </div>
 
             </div>
+
         </noscript>
     </main>
 
