--- a/404.html
+++ b/404.html
@@ -36,7 +36,7 @@
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Home<span class="sr-only">(current)</span></a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li><a href="show.html">Show room</a></li>
+					<!--<li><a href="show.html">Show room</a></li>-->
 					<li><a href="courses.html">Completed courses</a></li>
 				</ul>
 			</div>
