--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="/">Home<span class="sr-only">(current)</span></a></li>
 					<li class="active"><a href="#">Projects</a></li>
-					<li><a href="show.html">Show room</a></li>
+					<!--<li><a href="show.html">Show room</a></li>-->
 					<li><a href="courses.html">Completed courses</a></li>
 				</ul>
 			</div>
