--- a/show.html
+++ b/show.html
@@ -34,7 +34,7 @@
 				<ul class="nav navbar-nav">
 					<li><a href="/">Home<span class="sr-only">(current)</span></a></li>
 					<li><a href="projects.html">Projects</a></li>
-					<li class="active"><a href="#">Show room</a></li>
+					<!--<li class="active"><a href="#">Show room</a></li>-->
 					<li><a href="courses.html">Completed courses</a></li>
 				</ul>
 			</div>
@@ -55,7 +55,7 @@
 				<a href="nearme.html">
 					<img alt="near me image" src="images/nearme.jpg" class="img-responsive">
 				</a>
-				<p class="description">AngularJS application that shows a map and places fetched from Wikipedia API.</p>
+				<p class="extra-top-margin-20">AngularJS application that shows a map and places fetched from Wikipedia API.</p>
 			</div>
 
 			<div class="col-sm-6">
@@ -63,7 +63,7 @@
 				<a href="reader.html">
 					<img alt="Innovation Cloud image" src="images/show-reader.jpg" class="img-responsive">
 				</a>
-				<p class="description">Read your articles interactively.
+				<p class="extra-top-margin-20">Read your articles interactively.
 					<!--<br>-->
 					<ul>
 						<li><strong>Click</strong> any article to open/close it. (or press <strong>o</strong>)</li>
