--- a/404.html
+++ b/404.html
@@ -12,9 +12,20 @@
 	<meta name="description" content="404 custom page">
 	<meta name="robots" content="noindex">
 
-
-	<script async src="/js/vendors/HTMLImports.min.js"></script>
-	<link rel="import" href="/shared/styles.html">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+		crossorigin="anonymous">
+	<!--<link rel="stylesheet" href="/css/vendors/bootstrap.min.css">-->
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<link rel="stylesheet" href="/css/vendors/ie10-viewport-bug-workaround.css">
+	<!-- Custom styles -->
+	<link rel="stylesheet" href="/css/main.css">
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+		<script async src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script async src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 
 <body>
@@ -53,7 +64,14 @@
 		<p>Sorry, the page you're looking for doesn't exist!</p>
 	</main>
 
-	<link rel="import" href="/shared/scripts.html">
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!--<script src="/js/vendors/jquery.min.js"></script>-->
+	<script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+		crossorigin="anonymous"></script>
+	<!--<script async src="/js/vendors/bootstrap.min.js"></script>-->
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script async src="/js/vendors/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
