--- a/index.html
+++ b/index.html
@@ -11,8 +11,20 @@
 	<title>Personal info. - BaderSur</title>
 	<meta name="description" content="Information about @BaderSur like his skills which may help him to conquer this world.">
 
-	<script async src="/js/vendors/HTMLImports.min.js"></script>
-	<link rel="import" href="/shared/styles.html">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,200">
+	<!-- Bootstrap core CSS -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+		crossorigin="anonymous">
+	<!--<link rel="stylesheet" href="/css/vendors/bootstrap.min.css">-->
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<link rel="stylesheet" href="/css/vendors/ie10-viewport-bug-workaround.css">
+	<!-- Custom styles -->
+	<link rel="stylesheet" href="/css/main.css">
+	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+	<!--[if lt IE 9]>
+		<script async src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+		<script async src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+	<![endif]-->
 </head>
 
 <body>
@@ -45,7 +57,9 @@
 
 	<main class="container">
 		<noscript>
-			<strong>Please enable JavaScript!</strong>
+			<div class="visible-xs-block">
+				<strong>Please enable JavaScript!</strong>
+			</div>
 		</noscript>
 
 		<div class="row">
@@ -62,7 +76,7 @@
 						Python (Django, webapp2), C# (ASP.NET Core MVC) and PHP.
 					</li>
 					<li>Building native Android applications using Android Studio, XML and Java.</li>
-					<li>Designing/creating databases (MySQL, MS SQL Server 2014, SQLite, MongoDB & Google Datastore).</li>
+					<li>Designing/creating databases (MySQL, MS SQL Server, SQLite, MongoDB & Google Datastore).</li>
 					<li>Developing WPF desktop applications using XAML and C#.</li>
 				</ul>
 
@@ -88,7 +102,14 @@
 		</div>
 	</main>
 
-	<link rel="import" href="/shared/scripts.html">
+	<!-- Placed at the end of the document so the pages load faster -->
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+	<!--<script src="/js/vendors/jquery.min.js"></script>-->
+	<script async src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+		crossorigin="anonymous"></script>
+	<!--<script async src="/js/vendors/bootstrap.min.js"></script>-->
+	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+	<script async src="/js/vendors/ie10-viewport-bug-workaround.js"></script>
 </body>
 
 </html>
