Add telegram link

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 				<p>Feel free to contact me any time using:</p>
 				<ul>
 					<li>gmail: <a href="mailto:badersur@gmail.com?subject=gitpage-">badersur@gmail.com</a></li>
-					<li>Telegram: @BaderSur</li>
+					<li>Telegram: <a href="https://telegram.me/BaderSur">@BaderSur</a></li>
 					<li>Twitter: <a href="https://twitter.com/badersur">@BaderSur</a></li>
 				</ul>
 
