--- a/courses.html
+++ b/courses.html
@@ -20,6 +20,30 @@
 	<link rel="stylesheet" href="/css/vendors/ie10-viewport-bug-workaround.css">
 	<!-- Custom styles -->
 	<link rel="stylesheet" href="/css/main.css">
+
+    <style>
+        h2 {
+            margin-top: 60px;
+        }
+        
+        .card {
+            background: #f9f9f9;
+            border-radius: 3px;
+            box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
+            margin: 20px 0;
+            height: 120px;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+            cursor: pointer;
+            padding: 20px;
+            font-weight: bold;
+        }
+
+        .card:hover {box-shadow: 0 3px 4px rgba(0, 0, 0, 0.8);}
+        .inprogress {background: #fff url("/images/ic_loop_black_36px.svg") no-repeat right bottom;}
+    </style>
+
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 	<!--[if lt IE 9]>
 		<script async src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
@@ -61,7 +85,7 @@
 
             <h1 class="text-center">Completed online courses</h1>
 
-            <h2 class="extra-top-padding-60">
+            <h2 >
                 Microsoft Virtual Academy
 
                 <small><a href="https://mva.microsoft.com/Profile.aspx?alias=3423187">see profile</a></small>
@@ -202,7 +226,7 @@
 
             </div>
 
-            <h2 class="extra-top-padding-60">
+            <h2 >
                 Udacity
 
                 <small><a href="https://discussions.udacity.com/users/badersur">see profile</a></small>
@@ -263,7 +287,7 @@
 
             </div>
 
-            <h2 class="extra-top-padding-60">
+            <h2 >
                 Codecademy
 
                 <small><a href="https://www.codecademy.com/BaderSur">see profile</a></small>
@@ -304,7 +328,7 @@
 
             </div>
 
-            <h2 class="extra-top-padding-60">
+            <h2 >
                 NewCircle Training
 
             </h2>
