--- a/404.html
+++ b/404.html
@@ -45,9 +45,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="top-menu">
 				<ul class="nav navbar-nav">
-					<li><a href="projects.html">Projects</a></li>
-					<!--<li><a href="show.html">Show room</a></li>-->
-					<li><a href="courses.html">Completed courses</a></li>
+					<li><a href="/projects.html">Projects</a></li>
+					<li><a href="/courses.html">Completed courses</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
