--- a/index.html
+++ b/index.html
@@ -47,9 +47,8 @@
 			<!-- Collect the nav links, forms, and other content for toggling -->
 			<div class="collapse navbar-collapse" id="top-menu">
 				<ul class="nav navbar-nav">
-					<li><a href="projects.html">Projects</a></li>
-					<!--<li><a href="show.html">Show room</a></li>-->
-					<li><a href="courses.html">Completed courses</a></li>
+					<li><a href="/projects.html">Projects</a></li>
+					<li><a href="/courses.html">Completed courses</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
@@ -125,44 +124,7 @@
 	<script async src="/js/vendors/ie10-viewport-bug-workaround.js"></script>
 	<script src="/js/vendors/nunjucks.min.js"></script>
   	<script src="/js/vendors/spin.min.js"></script>
-	<script >
-		var opts = {
-			lines: 8 // The number of lines to draw
-			, length: 8 // The length of each line
-			, width: 8 // The line thickness
-			, radius: 8 // The radius of the inner circle
-			, scale: 1 // Scales overall size of the spinner
-			, corners: 1 // Corner roundness (0..1)
-			, color: '#000' // #rgb or #rrggbb or array of colors
-			, opacity: 0.25 // Opacity of the lines
-			, rotate: 0 // The rotation offset
-			, direction: 1 // 1: clockwise, -1: counterclockwise
-			, speed: 1 // Rounds per second
-			, trail: 60 // Afterglow percentage
-			, fps: 20 // Frames per second when using setTimeout() as a fallback for CSS
-			, zIndex: 2e9 // The z-index (defaults to 2000000000)
-			, className: 'spinner' // The CSS class to assign to the spinner
-			, top: '50%' // Top position relative to parent
-			, left: '50%' // Left position relative to parent
-			, shadow: false // Whether to render a shadow
-			, hwaccel: false // Whether to use hardware acceleration
-			, position: 'absolute' // Element positioning
-		};
-		var posts = document.querySelector('#posts');
-		var spinner = new Spinner(opts).spin(posts);
-		var jqxhr = $.ajax( "https://bader-sur.appspot.com/blog.json" )
-			.done(function(data) {
-				$('.notify').remove();
-				var env = nunjucks.configure('/views', { autoescape: true });
-				$('#posts').append(env.render('posts.html', { posts: data.posts }));
-				spinner.stop();
-			})
-			.fail(function() {
-				$('.notify').remove();
-				$('posts').append('<p>Error occured while fetching blog posts!</p>');
-				spinner.stop();
-			});
-	</script>
+	<script async src="/js/get_posts.js"></script>
 </body>
 
 </html>
