--- a/projects.html
+++ b/projects.html
@@ -45,8 +45,7 @@
 			<div class="collapse navbar-collapse" id="top-menu">
 				<ul class="nav navbar-nav">
 					<li class="active"><a href="#">Projects</a></li>
-					<!--<li><a href="show.html">Show room</a></li>-->
-					<li><a href="courses.html">Completed courses</a></li>
+					<li><a href="/courses.html">Completed courses</a></li>
 				</ul>
 			</div>
 			<!-- /.navbar-collapse -->
