--- a/courses.html
+++ b/courses.html
@@ -23,7 +23,7 @@
 
     <style>
         .card {
-            background: #f9f9f9;
+            background: #fff;
             border-radius: 3px;
             box-shadow: 0 3px 4px rgba(0, 0, 0, 0.3);
             margin: 20px 0;
@@ -344,6 +344,14 @@
         </noscript>
     </main>
 
+    <footer class="footer">
+		<div class="container">
+			<p class="text-muted">BaderSur &copy; 2015 - 2017. Last modified: 
+				<noscript>Please enable JS!</noscript>
+			</p>
+		</div>
+    </footer>
+
     <!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="/js/vendors/jquery.min.js"></script>-->
@@ -355,6 +363,7 @@
     <script src="/js/vendors/nunjucks.min.js"></script>
     <script src="/js/vendors/spin.min.js"></script>
     <script async src="/js/get_courses.js"></script>
+    <script async src="/js/get_push_date.js"></script>
 </body>
 
 </html>
