--- a/index.html
+++ b/index.html
@@ -90,7 +90,9 @@
 				</ul>
 
 				<h2>Note</h2>
-				<p>I have another Python <a href="https://bader-sur.appspot.com/?note">web app</a> hosted on Google App Engine (for free!) which has a <a href="https://bader-sur.appspot.com/blog?note">blog</a>.</p>
+				<p>I have a <a href="https://bader-sur.appspot.com/?note">web app</a>
+				 hosted on Google App Engine which has a 
+				 <a href="https://bader-sur.appspot.com/blog?note">semi-technical blog</a>.</p>
 			</section>
 
 			<section class="col-sm-4">
@@ -114,6 +116,14 @@
 		</div>
 	</main>
 
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted">BaderSur &copy; 2015 - 2017. Last modified: 
+				<noscript>Please enable JS!</noscript>
+			</p>
+		</div>
+    </footer>
+
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="/js/vendors/jquery.min.js"></script>-->
@@ -125,6 +135,7 @@
 	<script src="/js/vendors/nunjucks.min.js"></script>
   	<script src="/js/vendors/spin.min.js"></script>
 	<script async src="/js/get_posts.js"></script>
+	<script async src="/js/get_push_date.js"></script>
 </body>
 
 </html>
