--- a/projects.html
+++ b/projects.html
@@ -188,6 +188,14 @@
 		</div>
 	</main>
 
+	<footer class="footer">
+		<div class="container">
+			<p class="text-muted">BaderSur &copy; 2015 - 2017. Last modified: 
+				<noscript>Please enable JS!</noscript>
+			</p>
+		</div>
+    </footer>
+
 	<!-- Placed at the end of the document so the pages load faster -->
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<!--<script src="/js/vendors/jquery.min.js"></script>-->
@@ -196,6 +204,7 @@
 	<!--<script async src="/js/vendors/bootstrap.min.js"></script>-->
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script async src="/js/vendors/ie10-viewport-bug-workaround.js"></script>
+	<script async src="/js/get_push_date.js"></script>
 </body>
 
 </html>
