Use moment.js and tweaks

--- a/index.html
+++ b/index.html
@@ -118,9 +118,7 @@
 
 	<footer class="footer">
 		<div class="container">
-			<p class="text-muted">BaderSur &copy; 2015 - 2017. Last modified: 
-				<noscript>Please enable JS!</noscript>
-			</p>
+			<p class="text-muted"></p>
 		</div>
     </footer>
 
@@ -132,7 +130,9 @@
 	<!--<script async src="/js/vendors/bootstrap.min.js"></script>-->
 	<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
 	<script async src="/js/vendors/ie10-viewport-bug-workaround.js"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.17.1/moment.min.js" integrity="sha256-Gn7MUQono8LUxTfRA0WZzJgTua52Udm1Ifrk5421zkA=" crossorigin="anonymous"></script>
 	<script src="/js/vendors/nunjucks.min.js"></script>
+	<script src="/js/nunjucks_config.js"></script>
   	<script src="/js/vendors/spin.min.js"></script>
 	<script async src="/js/get_posts.js"></script>
 	<script async src="/js/get_push_date.js"></script>
