Modify blog's link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 				<hr>
 
 				<div id="posts">
-					<h2><a href="https://bader-sur.appspot.com/blog">Blog posts</a></h2>
+					<h2><a href="https://bader-sur.appspot.com/blog?section">Blog posts</a></h2>
 					<noscript>
 						<p>Please enable JS to fetch blog posts!</p>
 					</noscript>
