--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
 
 				<h2>Skills</h2>
 				<ul>
-					<li>Creating RESTful APIs and responsive websites using HTML5, CSS3 (Bootstrap), JavaScript (Node, Express, Angular & jQuery),
-						Python (Django, webapp2), C# (ASP.NET Core MVC) and PHP.
+					<li>Creating RESTful APIs and responsive websites using HTML5, 
+						CSS3 (Bootstrap), JavaScript (Angular 1, jQuery, Nunjucks & Moment.js),
+            TypeScript (Angular 2), Node.js (Express), Python (Django, webapp2),
+            C# (ASP.NET Core MVC) and PHP.
 					</li>
 					<li>Building native Android applications using Android Studio, XML and Java.</li>
 					<li>Designing/creating databases (MySQL, MS SQL Server, SQLite, MongoDB & Google Datastore).</li>
