Update travis to deploy my Google App Engine app & some tweaks

--- a/app/404.html
+++ b/app/404.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 @@include('./partials/head.html', {
-  "title": "404, Page Not Found",
+  "title": "Page Not Found",
   "description": "This page does NOT exist!"
 })
 
