Use mdl-sass, bundle JS and tweaks!

--- a/app/courses.html
+++ b/app/courses.html
@@ -3,11 +3,10 @@
 
 @@include('./partials/head.html', {
   "title": "Completed online courses",
-  "description": "Most of the online courses that @BaderSur has completed!",
-  "coursesStyles": true
+  "description": "Most of the online courses that @BaderSur has completed!"
 })
 
-<body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+<body class="mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
   <!-- Always shows a header, even in smaller screens. -->
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
@@ -16,7 +15,7 @@
     <main class="mdl-layout__content">
       <div class="page-content">
 
-        <div class="mdl-grid extra-margin">
+        <div class="mdl-grid courses">
 
           <h4 class="mdl-cell--12-col">Completed online courses</h4>
 
