--- a/app/404.html
+++ b/app/404.html
@@ -6,7 +6,7 @@
   "description": "This page does NOT exist!"
 })
 
-<body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+<body class="mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
   <!-- Always shows a header, even in smaller screens. -->
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
