--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
   "description": "Information about @BaderSur like his skills which may help him to conquer this world."
 })
 
-<body class="mdl-demo mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
+<body class="mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
   <!-- Always shows a header, even in smaller screens. -->
   <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
 
