--- a/app/index.html
+++ b/app/index.html
@@ -1,32 +1,97 @@
-<!doctype html>
-<html lang="en">
+{% set title = "Overview" %}
+{% set description = "Information about @BaderSur like his skills which may help
+ him to conquer this world." %}
+{% set mainScripts = true %}
 
-@@include('./partials/head.html', {
-  "title": "Overview",
-  "description": "Information about @BaderSur like his skills which may help him to conquer this world."
-})
+{% extends "./partials/base.html" %}
 
-<body class="mdl-color--grey-100 mdl-color-text--grey-700 mdl-base">
-  <!-- Always shows a header, even in smaller screens. -->
-  <div class="mdl-layout mdl-js-layout mdl-layout--fixed-header">
+{% block content %}
 
-    @@include('./partials/header.html')
+  <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+    <header class="section__play-btn mdl-cell mdl-cell--3-col-desktop
+    mdl-cell--2-col-tablet mdl-cell--hide-phone mdl-color--teal-100
+    mdl-color-text--white">
+    </header>
 
-    <main class="mdl-layout__content">
-      <div class="page-content">
+    <div class="mdl-card mdl-cell mdl-cell--9-col-desktop mdl-cell--6-col-tablet
+     mdl-cell--4-col-phone">
+      <div class="mdl-card__supporting-text">
+        <h4>Welcome</h4>
+        I'm <strong>Bader</strong> Nasser Al-Hashmi from a city in Oman called
+        <strong>Sur</strong>. I'm a computer engineer and a developer. You may find me
+        on <a href="https://discussions.udacity.com/users/badersur">Udacity Discussion
+        Forum</a> answering questions about <a href="https://discussions.udacity.com/c/standalone-courses/web-development">web
+        development</a>.
+      </div>
+    </div>
+  </section>
 
-        @@include('./partials/main.html')
 
-        @@include('./partials/footer.html')
+  <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+    <div class="mdl-card mdl-cell mdl-cell--12-col">
+      <div class="mdl-card__supporting-text mdl-grid mdl-grid--no-spacing">
+        <h4 class="mdl-cell mdl-cell--12-col">Skills</h4>
+
+        <div class="section__circle-container mdl-cell mdl-cell--2-col
+         mdl-cell--1-col-phone">
+          <div class="section__circle-container__circle mdl-color--primary"></div>
+        </div>
+        <div class="section__text mdl-cell mdl-cell--10-col-desktop
+         mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+          <h5>Designing/manipulating SQL and NoSQL databases</h5>
+          using MySQL, MS SQL Server, Google Cloud Datastore, MongoDB, SQLite
+        </div>
+
+        <div class="section__circle-container mdl-cell mdl-cell--2-col
+         mdl-cell--1-col-phone">
+          <div class="section__circle-container__circle mdl-color--primary"></div>
+        </div>
+        <div class="section__text mdl-cell mdl-cell--10-col-desktop
+         mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+          <h5>Building native Android applications</h5>
+          using XML, Java and Android Studio
+        </div>
+
+        <div class="section__circle-container mdl-cell mdl-cell--2-col
+         mdl-cell--1-col-phone">
+          <div class="section__circle-container__circle mdl-color--primary"></div>
+        </div>
+        <div class="section__text mdl-cell mdl-cell--10-col-desktop
+         mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+          <h5>Creating REST APIs</h5>
+          using Python, C#, Node.js and PHP
+        </div>
+
+        <div class="section__circle-container mdl-cell mdl-cell--2-col
+         mdl-cell--1-col-phone">
+          <div class="section__circle-container__circle mdl-color--primary"></div>
+        </div>
+        <div class="section__text mdl-cell mdl-cell--10-col-desktop
+         mdl-cell--6-col-tablet mdl-cell--3-col-phone">
+          <h5>Building responsive websites</h5>
+          using HTML5, CSS3 (Bootstrap, MDL), JavaScript / ES6 (Angular 1, jQuery),
+          TypeScript (Angular 2), Node.js (Express), Python (Django, webapp2,
+          Beautiful Soup), C# 6 (ASP.NET Core MVC, EF), PHP 7 (Laravel, Restler),
+          yarn / npm, gulp, Babel and webpack 2
+        </div>
 
       </div>
-    </main>
+    </div>
+  </section>
 
-  </div>
 
-  @@include('./partials/scripts.html', {"mainScripts": true})
+  <section class="section--center mdl-grid mdl-grid--no-spacing mdl-shadow--2dp">
+    <div class="mdl-card mdl-cell mdl-cell--12-col">
+      <div class="mdl-card__supporting-text">
+        <h4>Contact</h4>
+        Feel free to contact me at anytime at <a href="mailto:BaderSur@gmail.com">BaderSur@gmail.com</a>
+        for job offers or any thing else. You can also reach me via Twitter
+        (<a href="https://twitter.com/BaderSur">@BaderSur</a>) and Telegram
+        (<a href="https://telegram.me/BaderSur">@BaderSur</a>).
+      </div>
+    </div>
+  </section>
 
-  <!-- Built with love using Web Starter Kit -->
-</body>
+  {% include ("./partials/js-templates.html") %}
 
-</html>
+{% endblock %}
