yarning again & URL clean up!

--- a/app/ar/courses.html
+++ b/app/ar/courses.html
@@ -1,6 +1,6 @@
 {% set title = "الدورات الإلكترونية التي أكملتها" %}
 {% set description = "معظم الدورات الإلكترونية التي أكملتها" %}
-{% set link = "/courses" + ("" if isGAE else ".html") %}
+{% set link = "/courses" + extension %}
 
 {% extends "base.html" %}
 
