--- a/app/ar/projects.html
+++ b/app/ar/projects.html
@@ -1,6 +1,6 @@
 {% set title = "المشاريع" %}
 {% set description = "بعض المشاريع التقنية التي أنهيتها." %}
-{% set link = "/projects" + ("" if isGAE else ".html") %}
+{% set link = "/projects" + extension %}
 
 {% extends "base.html" %}
 
