--- a/app/en/courses.html
+++ b/app/en/courses.html
@@ -1,7 +1,7 @@
 {% set lang = "en" %}
 {% set title = "Completed online courses" %}
 {% set description = "Most of the online courses that @BaderSur has completed!" %}
-{% set link = "/courses" + ("" if isGAE else ".html") %}
+{% set link = "/courses" + extension %}
 
 {% extends "base.html" %}
 
