--- a/app/en/projects.html
+++ b/app/en/projects.html
@@ -1,7 +1,7 @@
 {% set lang = "en" %}
 {% set title = "Projects" %}
 {% set description = "Some projects that @BaderSur has done so far." %}
-{% set link = "/projects" + ("" if isGAE else ".html") %}
+{% set link = "/projects" + extension %}
 
 {% extends "base.html" %}
 
